# multi_method

./: CMakeLists.txt  README.md  multi_method_test.cc
multi_method/: bases.h  multi_method.h  partial.h  table.h
